# munchmate-backend

./: .gitignore  Cargo.toml  Procfile  README.md  main.go  munchmate-backend.sublime-project  rerun.sh  run
Godeps/: Godeps.json
common/: Datebase.go  Location.go  Response.go
src/: main.rs  util.rs
src/api/: canteen.rs  mod.rs  util.rs
src/api/v1/: canteen.rs  mod.rs
src/db/: mod.rs
src/model/: mod.rs
src/model/v1/: canteen.rs  mod.rs
src/v1/: mod.rs
src/v1/api/: canteen.rs  mod.rs  user.rs  util.rs
src/v1/db/: mod.rs
src/v1/model/: canteen.rs  mod.rs  user.rs
store/: Canteen.go  Datebase.go  Munch.go  User.go
v1/: Canteen.go  Munch.go  Router.go  User.go  query.txt
