[package]

name = "munchmate-backend"
version = "0.0.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[dependencies]
hyper = "*"
iron = "*"
rustc-serialize = "*"
valico = "*"
postgres = "*"
openssl = "*"
typemap = "*"
r2d2 = "*"
r2d2_postgres = "*"

[dependencies.rustless]
git = "https://github.com/rustless/rustless"