[package]

name = "munchmate-backend"
version = "0.0.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[dependencies]
hyper = "*"
iron = "*"
openssl = "*"
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
rustc-serialize = "*"
time = "*"
typemap = "*"
valico = "*"

[dependencies.rustless]
git = "https://github.com/rustless/rustless"
